# readguy

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  library.json  library.properties  platformio.ini
examples/ex01_helloWorld/: ex01_helloWorld.ino
examples/ex02_demo/: ex02_demo.ino
examples/ex03_buttons/: ex03_buttons.ino
examples/ex03_multifont/ex03_1_u8g2font/: ex03_1_u8g2font.ino
examples/ex04_wifi/1_wifi_ap_server/: 1_wifi_ap_server.ino
examples/ex04_wifi/2_wifi_config/: 2_wifi_config.ino
examples/ex04_wifi/3_build_without_wifi/: 3_build_without_wifi.ino
examples/ex04_wifi/4_wifi_text_show/: ctg_u8g2_wqy12.c  (+2 more)
examples/ex06_Image/: ex06_Image.ino  guy_image.cpp  guy_image.h  main.cpp
extra/ctg_timelib/: TimeLib.h  ctg_timelib.cpp  ctg_timelib.hpp
extra/guy_driver_template/: readme.md
extra/platformio/: platformio.ini  readguy_2MB_noOTA.csv  sdkconfig.esp32c3_luatos  sdkconfig.esp32c3_no_uart  sdkconfig.esp32dev  sdkconfig.esp32s2_dev  sdkconfig.esp32s3_2m  sdkconfig.esp32s3_8m
extra/tools/: file2bin.c  stringConverter.cpp
extra/webconfig/: final.html  final.html.txt  index_cn.html  index_cn.html.txt  verify.html  verify.html.txt
lib/guy_ePaper/: guy_epaper_config.h  guy_epdbase.cpp  guy_epdbase.h
lib/readguy/: guy_button.cpp  guy_button.h  guy_driver.cpp  guy_driver.h  guy_driver_config.h  guy_version.h  guy_wireless.cpp
src/: guy_button.cpp  guy_button.h  guy_config_host.h  guy_driver_config.h  guy_version.h  guy_wireless.cpp  main.cpp  readguy.cpp  readguy.h
src/guy_epaper/: guy_epaper_config.h  guy_epdbase.cpp  guy_epdbase.h
(+50 files in other folders)
